correcciones de clases a BEM

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     </section>
     <section class="container-fluid text-center portada">
       <div class="row">
-        <h1 class="col-12 portada-h1">DIAGNÓSTICO MEDICO POR IMÁGENES</h1>
-        <p class="col-12 portada-p">Calidad y excelencia médica</p>
+        <h1 class="col-12 portada__h1">DIAGNÓSTICO MEDICO POR IMÁGENES</h1>
+        <p class="col-12 portada__p">Calidad y excelencia médica</p>
       </div>
     </section>
 
@@ -76,8 +76,8 @@
     <section class="container text-center">
 
       <div class="row">
-        <div class="col-12 col-lg-6">
-          <h3 class="titulo-info">Ubicación</h3>
+        <div class="col-12 col-lg-6 info">
+          <h3 class="info__titulo">Ubicación</h3>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.4016707189667!2d-58.
       96685248506748!3d-34.16164674174783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb724a90b0
       2a5f%3A0xd18e055c7200a506!2sBeruti%20294%2C%20Campana%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!
@@ -87,8 +87,8 @@
         </div>
 
         <div class="col-12 text-start col-lg-6 text-lg-start">
-          <h3 class="titulo-info">Información de contacto</h3>
-          <ul class="informacion-index">
+          <h3 class="info__titulo">Información de contacto</h3>
+          <ul class="info__listado">
             <li><img src="./iconos/location.svg" class="location">Dirección: Beruti 294</li>
             <li><img src="./iconos/phone.svg" class="phone">Teléfono: 03489 427153</li>
             <li><img src="./iconos/whatsapp.svg" class="wapp">WhatsApp +54 9 3489455046</li>
@@ -102,11 +102,11 @@
   </main>
 
   <footer class="container-fluid text-center">
-    <div class="row eslogan">
+    <div class="row footer__eslogan">
       <p class="col-12">Diagnóstico por Imágenes.</p>
       <p class="col-12">Excelencia médica.</p>
     </div>
-    <div class="row dweb">
+    <div class="row footer__desarrollo">
       <p class="col-12"> Desarrollo by The Blue Team.</p>
       <p class="col-12">Todos los derechos reservados.</p>
     </div>
