--- a/pages/cobertura.html
+++ b/pages/cobertura.html
@@ -87,11 +87,11 @@
     </section>
   </main>
   <footer class="container-fluid text-center">
-    <div class="row eslogan">
+    <div class="row footer__eslogan">
       <p class="col-12">Diagnóstico por Imágenes.</p>
       <p class="col-12">Excelencia médica.</p>
     </div>
-    <div class="row dweb">
+    <div class="row footer__desarrollo">
       <p class="col-12"> Desarrollo by The Blue Team.</p>
       <p class="col-12">Todos los derechos reservados.</p>
     </div>
