--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -58,14 +58,14 @@
             <h1>Estudios médicos</h1>
             <div class="row estudios">
                 <div class="col-12 text-center col-lg-3 text-lg-center">
-                    <h2 class="titulo-h2">Radiología Digital</h2>
-                    <ul class="estudios-ul">
+                    <h2 class="estudios__h2">Radiología Digital</h2>
+                    <ul class="estudios__ul">
                         <li>Radiografia general</li>
                     </ul>
                 </div>
                 <div class="col-12 text-center col-lg-3 text-lg-center">
-                    <h2 class="titulo-h2">Ecografia General</h2>
-                    <ul class="estudios-ul">
+                    <h2 class="estudios__h2">Ecografia General</h2>
+                    <ul class="estudios__ul">
                         <li>Ecografia de abdomen</li>
                         <li>Ecografía renal</li>
                         <li>Ecografía vesical/vesicoprostática</li>
@@ -79,8 +79,8 @@
                     </ul>
                 </div>
                 <div class="col-12 text-center col-lg-3 text-lg-center">
-                    <h2 class="titulo-h2">Eco Doppler color</h2>
-                    <ul class="estudios-ul">
+                    <h2 class="estudios__h2">Eco Doppler color</h2>
+                    <ul class="estudios__ul">
                         <li>Doppler venoso/arterial de MMII/MMSS</li>
                         <li>Doppler de carótidas</li>
                         <li>Doppler de partes blandas</li>
@@ -91,8 +91,8 @@
                     </ul>
                 </div>
                 <div class="col-12 text-center col-lg-3 text-lg-center">
-                    <h2 class="titulo-h2">Estudios mamarios</h2>
-                    <ul class="estudios-ul">
+                    <h2 class="estudios__h2">Estudios mamarios</h2>
+                    <ul class="estudios__ul">
                         <li>Ecografia mamaria</li>
                         <li>Mamografia digital</li>
                         <li>Doppler mamario</li>
@@ -107,11 +107,11 @@
         </section>
     </main>
     <footer class="container-fluid text-center">
-        <div class="row eslogan">
+        <div class="row footer__eslogan">
             <p class="col-12">Diagnóstico por Imágenes.</p>
             <p class="col-12">Excelencia médica.</p>
         </div>
-        <div class="row dweb">
+        <div class="row footer__desarrollo">
             <p class="col-12"> Desarrollo by The Blue Team.</p>
             <p class="col-12">Todos los derechos reservados.</p>
         </div>
