--- a/pages/staffmedico.html
+++ b/pages/staffmedico.html
@@ -55,56 +55,56 @@
 
       <div class="container staff">
         <dl class="row">
-          <h2 class="staff-h2">Especialistas en Diagnóstico por Imágenes</h2>
+          <h2 class="staff__h2">Especialistas en Diagnóstico por Imágenes</h2>
 
           <div class="col-12 text-center col-lg-4 text-lg-center">
             <dt>
-              <strong class="staffmedico-name">Dra. Maria Alejandra Stamponi</strong>
+              <strong class="staff__name">Dra. Maria Alejandra Stamponi</strong>
             </dt>
             <dd>
-              <p class="staffmedico-p">Coordinadora del departamento de diagnóstico mamario por imágenes
+              <p class="staff__p">Coordinadora del departamento de diagnóstico mamario por imágenes
                 en el Centro de Diagnóstico Rossi</p>
-              <img src="../imagenes/ale.jpeg" alt="doctora" class="img-thumbnail foto">
+              <img src="../imagenes/ale.jpeg" alt="doctora stamponi" class="img-thumbnail staff__foto">
             </dd>
           </div>
 
           <div class="col-12 text-center col-lg-4 text-lg-center">
             <dt>
-              <strong class="staffmedico-name" class="col-12">Dr. Jorge Luis Verhaz</strong>
+              <strong class="staff__name" class="col-12">Dr. Jorge Luis Verhaz</strong>
             </dt>
             <dd>
-              <p class="staffmedico-p">Jefe del departamento de diagnóstico por imágenes del Hospital
+              <p class="staff__p">Jefe del departamento de diagnóstico por imágenes del Hospital
                 Municipal Ciudad de Boulogne</p>
-              <img src="../imagenes/jorge.jpg" alt="doctor" class="img-thumbnail text-center foto">
+              <img src="../imagenes/jorge.jpg" alt="doctor verhaz" class="img-thumbnail text-center staff__foto">
             </dd>
           </div>
 
           <div class="col-12 text-center col-lg-4 text-lg-center">
             <dt>
-              <strong class="staffmedico-name">Dr. Lucas Jose Chomont</strong>
+              <strong class="staff__name">Dr. Lucas Jose Chomont</strong>
             </dt>
             <dd>
-              <p class="staffmedico-p">Jefe del departamento de diagnóstico por imágenes del Hospital
+              <p class="staff__p">Jefe del departamento de diagnóstico por imágenes del Hospital
                 Municipal San Jose de Campana</p>
-              <img src="../imagenes/lucas.jpg" alt="doctor" class="img-thumbnail text-center foto">
+              <img src="../imagenes/lucas.jpg" alt="doctor chomont" class="img-thumbnail text-center staff__foto">
             </dd>
           </div>
 
-          <div class="col-12 text-center col-lg-6 text-lg-center medico">
+          <div class="col-12 text-center col-lg-6 text-lg-center staff__medico">
             <dt>
-              <strong class="staffmedico-name">Dr. Ivan Claudio Petrunic</strong>
+              <strong class="staff__name">Dr. Ivan Claudio Petrunic</strong>
             </dt>
             <dd>
-              <p class="staffmedico-p">Médico Especialista en Diagnóstico por Imágenes</p>
+              <p class="staff__p">Médico Especialista en Diagnóstico por Imágenes</p>
             </dd>
           </div>
 
-          <div class="col-12 text-center col-lg-6 text-lg-center medico">
+          <div class="col-12 text-center col-lg-6 text-lg-center staff__medico">
             <dt>
-              <strong class="staffmedico-name">Dr. Javier Adrian Fernandez</strong>
+              <strong class="staff__name">Dr. Javier Adrian Fernandez</strong>
             </dt>
             <dd>
-              <p class="staffmedico-p">Médico Especialista en Diagnóstico por Imágenes</p>
+              <p class="staff__p">Médico Especialista en Diagnóstico por Imágenes</p>
             </dd>
           </div>
 
@@ -113,32 +113,32 @@
       <div class="container staff">
 
         <dl class="row">
-          <h2 class="staff-titulo">Especialidades</h2>
+          <h2 class="staff__titulo">Especialidades</h2>
 
           <div class="col-12 text-center col-lg-4 text-lg-center">
             <dt>
-              <p class="staffmedico-p">Traumatología infantil.</p>
+              <p class="staff__p">Traumatología infantil.</p>
             </dt>
             <dd>
-              <strong class="staffmedico-name">Dr. Suarez Claudio Augusto</strong>
+              <strong class="staff__name">Dr. Suarez Claudio Augusto</strong>
             </dd>
           </div>
 
           <div class="col-12 text-center col-lg-4 text-lg-center">
             <dt>
-              <p class="staffmedico-p">Psiquiatría infanto/juvenil</p>
+              <p class="staff__p">Psiquiatría infanto/juvenil</p>
             </dt>
             <dd>
-              <strong class="staffmedico-name">Dr. Suarez Claudio Augusto</strong>
+              <strong class="staff__name">Dr. Suarez Claudio Augusto</strong>
             </dd>
           </div>
 
           <div class="col-12 text-center col-lg-4 text-lg-center">
             <dt>
-              <p class="staffmedico-p">Mastología.</p>
+              <p class="staff__p">Mastología.</p>
             </dt>
             <dd>
-              <strong class="staffmedico-name">Dra. Carla Guscelli</strong>
+              <strong class="staff__name">Dra. Carla Guscelli</strong>
             </dd>
           </div>
          </div>
@@ -149,11 +149,11 @@
 
   </main>
   <footer class="container-fluid text-center">
-    <div class="row eslogan">
+    <div class="row footer__eslogan">
       <p class="col-12">Diagnóstico por Imágenes.</p>
       <p class="col-12">Excelencia médica.</p>
     </div>
-    <div class="row dweb">
+    <div class="row footer__desarrollo">
       <p class="col-12"> Desarrollo by The Blue Team.</p>
       <p class="col-12">Todos los derechos reservados.</p>
     </div>
