trabaje sobre media queries, falta solucionar errores

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     </section>
     <section class="container-fluid text-center portada">
       <div class="row">
-        <h1 class="col-12 portada__h1">DIAGNÓSTICO MEDICO POR IMÁGENES</h1>
-        <p class="col-12 portada__p">Calidad y excelencia médica</p>
+        <h1 class="portada__h1">DIAGNÓSTICO MEDICO POR IMÁGENES</h1>
+        <p class="col-12 col-12 portada__p">Calidad y excelencia médica</p>
       </div>
     </section>
 
