--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -61,7 +61,7 @@ Atención con turno de lunes a viernes de 8 a 19hs.">
     </div>
 
     <div class="container">
-      <form class="row form g-3">
+      <form class="row form g-3" action="form.php" method="POST">
 
         <div class="col-6">
           <label for="campo-nombre" class="form-label">Nombre y Apellido:</label>
@@ -87,7 +87,7 @@ Atención con turno de lunes a viernes de 8 a 19hs.">
 
         <div class="col-12">
           <p>Mensaje</p>
-          <textarea name="id" cols="30" rows="10" class="form-control"></textarea>
+          <textarea name="text" cols="30" rows="10" class="form-control"></textarea>
         </div>
 
         <div class="col-6">
