le di estilos a la pagina exito

--- a/pages/exito.html
+++ b/pages/exito.html
@@ -18,15 +18,42 @@
   <meta name="description" content="Atendemos por obras sociales y prepagas, atencion paticular y por reintegro">
   <title>Radius | Gracias por tu mensaje</title>
 </head>
-<body class="exito">
-    
 
-<h1 class="exito__h1">
-    Gracias por escribirnos. Responderemos a la brevedad.
-</h1>
-<script>
-    setTimeout(function() {
-        window.location.replace(index.html);}, 2000);
-</script>
+<body class="exito">
+  <main>
+    <section class="container-fluid">
+      <div class="row">
+        <p class="col-12 text-center exito__p">
+          ¡Gracias por su mensaje!
+        </p>
+        <p class="col-12 text-center exito__p">
+          El mismo se envió con éxito.
+        </p>
+        <p class="col-12 text-center exito__p">
+          Le responderemos a la brevedad posible.
+        </p>
+      </div>
+    </section>
+  </main>
+  <footer class="container-fluid text-center">
+    <div class="row footer__eslogan">
+      <p class="col-12">Diagnóstico por Imágenes.</p>
+      <p class="col-12">Excelencia médica.</p>
+    </div>
+    <div class="row footer__desarrollo">
+      <p class="col-12"> Desarrollo by The Blue Team.</p>
+      <p class="col-12">Todos los derechos reservados.</p>
+    </div>
+  </footer>
+
+  <script>
+    setTimeout(function () {
+      window.location.replace(index.html);
+    }, 2000);
+  </script>
+
+  <script src="./js/bootstrap.js"></script>
+
 </body>
+
 </html>
