--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section class="container text-center">
 
       <div class="row">
-        <div class="col-12 col-lg-6 info">
+        <div class="col-12 text-start col-lg-6 info">
           <h3 class="info__titulo">Ubicación</h3>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.4016707189667!2d-58.
       96685248506748!3d-34.16164674174783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb724a90b0
