agregue pagina de indicaciones, di nuevos estilos y colores

--- a/index.html
+++ b/index.html
@@ -101,12 +101,14 @@
 
   </main>
 
-  <footer class="container-fluid text-center">
-    <div class="row footer__eslogan">
-      <p class="col-12">Diagnóstico por Imágenes.</p>
-      <p class="col-12">Excelencia médica.</p>
+  <footer class="container-fluid">
+    <div class="row footer__eslogan text-start">
+      <img src="../logo/logo.png" alt="logo empresa" class="col-6 logoempresa">
+      <p class="col-6">    Radius <br>
+                    Diagnóstico por Imágenes. <br>
+                        Excelencia médica.</p>
     </div>
-    <div class="row footer__desarrollo">
+    <div class="row footer__desarrollo text-center">
       <p class="col-12"> Desarrollo by The Blue Team.</p>
       <p class="col-12">Todos los derechos reservados.</p>
     </div>
