--- a/pages/cobertura.html
+++ b/pages/cobertura.html
@@ -51,47 +51,49 @@
 
     </section>
     <section>
-
       <h1>Cobertura médica</h1>
+      <p class="cobertura-p">En esta sección podrás consultar que coberturas médicas atendemos</p>
       <div>
         <ul class="cobertura">
           <div class="cobertura-1">
-          <li>Accord Salud</li>
-          <li>Amffa</li>
-          <li>APM (Agente de propaganda médica)</li>
-          <li>Apsot</li>
-          <li>Banco provincia</li>
-          <li>CASA</li>
-          <li>Cobertec</li>
-          <li>Colegio de escribanos (provincia)</li>
-          <li>COMEI</li>
-          <li>Dasmi</li>
-          <li>Dasuten</li>
-          <li>Federada Salud</li>
-        </div>
-        <div class="cobertura-2">
-          <li>Galeno</li>
-          <li>Jerarquicos Salud</li>
-          <li>Medife</li>
-          <li>Medicus</li>
-          <li>Omint</li>
-          <li>Osde</li>
-          <li>Osdipp</li>
-          <li>Patrones de Cabotaje</li>
-          <li>Prevencion Salud</li>
-          <li>Sancor Salud</li>
-          <li>Swiss Medical</li>
-        </div>
+            <li>Accord Salud</li>
+            <li>Amffa</li>
+            <li>APM (Agente de propaganda médica)</li>
+            <li>Apsot</li>
+            <li>Banco provincia</li>
+            <li>CASA</li>
+            <li>Cobertec</li>
+            <li>Colegio de escribanos (provincia)</li>
+            <li>COMEI</li>
+            <li>Dasmi</li>
+            <li>Dasuten</li>
+            <li>Federada Salud</li>
+          </div>
+          <div class="cobertura-2">
+            <li>Galeno</li>
+            <li>Jerarquicos Salud</li>
+            <li>Medife</li>
+            <li>Medicus</li>
+            <li>Omint</li>
+            <li>Osde</li>
+            <li>Osdipp</li>
+            <li>Patrones de Cabotaje</li>
+            <li>Prevencion Salud</li>
+            <li>Sancor Salud</li>
+            <li>Swiss Medical</li>
+          </div>
         </ul>
       </div>
     </section>
   </main>
-  <footer class="container-fluid text-center">
-    <div class="row footer__eslogan">
-      <p class="col-12">Diagnóstico por Imágenes.</p>
-      <p class="col-12">Excelencia médica.</p>
+  <footer class="container-fluid">
+    <div class="row footer__eslogan text-start">
+      <img src="../logo/logo.png" alt="logo empresa" class="col-6 logoempresa">
+      <p class="col-6"> Radius <br>
+        Diagnóstico por Imágenes. <br>
+        Excelencia médica.</p>
     </div>
-    <div class="row footer__desarrollo">
+    <div class="row footer__desarrollo text-center">
       <p class="col-12"> Desarrollo by The Blue Team.</p>
       <p class="col-12">Todos los derechos reservados.</p>
     </div>
