--- a/pages/staffmedico.html
+++ b/pages/staffmedico.html
@@ -55,7 +55,7 @@
 
       <div class="container staff">
         <dl class="row">
-          <h2 class="staff__h2">Especialistas en Diagnóstico por Imágenes</h2>
+          <h2 class="staff__titulo">Especialistas en Diagnóstico por Imágenes</h2>
 
           <div class="col-12 text-center col-lg-4 text-lg-center">
             <dt>
@@ -148,12 +148,14 @@
     </div>
 
   </main>
-  <footer class="container-fluid text-center">
-    <div class="row footer__eslogan">
-      <p class="col-12">Diagnóstico por Imágenes.</p>
-      <p class="col-12">Excelencia médica.</p>
+  <footer class="container-fluid">
+    <div class="row footer__eslogan text-start">
+      <img src="../logo/logo.png" alt="logo empresa" class="col-6 logoempresa">
+      <p class="col-6">    Radius <br>
+                    Diagnóstico por Imágenes. <br>
+                        Excelencia médica.</p>
     </div>
-    <div class="row footer__desarrollo">
+    <div class="row footer__desarrollo text-center">
       <p class="col-12"> Desarrollo by The Blue Team.</p>
       <p class="col-12">Todos los derechos reservados.</p>
     </div>
