--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -57,31 +57,33 @@
         <section class="container-fluid">
             <h1>Estudios médicos</h1>
             <div class="row estudios">
-                <div class="col-12 text-center col-lg-3 text-lg-center">
+
+                <div class="col-12 text-start col-lg-3 text-lg-start">
                     <h2 class="estudios__h2">Radiología Digital</h2>
                     <ul class="estudios__ul">
-                        <li>Radiografia general</li>
+                       <li>Radiografia general</li>
                     </ul>
                 </div>
-                <div class="col-12 text-center col-lg-3 text-lg-center">
+                <div class="col-12 text-start col-lg-3 text-lg-start">
                     <h2 class="estudios__h2">Ecografia General</h2>
                     <ul class="estudios__ul">
-                        <li>Ecografia de abdomen</li>
+                        <li>Ecografía de abdomen</a></li>
                         <li>Ecografía renal</li>
                         <li>Ecografía vesical/vesicoprostática</li>
                         <li>Ecografia testicular</li>
                         <li>Ecografia de tiroides</li>
-                        <li>Ecografia ginecologica/obstetrica/TV</li>
+                        <li>Ecografia ginecologica/TV</li>
+                        <li>Ecografía obstétrica</li>
                         <li>Ecografia de partes blandas</li>
                         <li>Ecografia de caderas</li>
                         <li>Ecografia de parótidas</li>
                         <li>Ecografía cerebral</li>
                     </ul>
                 </div>
-                <div class="col-12 text-center col-lg-3 text-lg-center">
+                <div class="col-12 text-start col-lg-3 text-lg-start">
                     <h2 class="estudios__h2">Eco Doppler color</h2>
                     <ul class="estudios__ul">
-                        <li>Doppler venoso/arterial de MMII/MMSS</li>
+                        <li>Doppler venoso/arterial</li>
                         <li>Doppler de carótidas</li>
                         <li>Doppler de partes blandas</li>
                         <li>Doppler tiroideo</li>
@@ -90,7 +92,7 @@
                         <li>Scan fetal</li>
                     </ul>
                 </div>
-                <div class="col-12 text-center col-lg-3 text-lg-center">
+                <div class="col-12 text-start col-lg-3 text-lg-start">
                     <h2 class="estudios__h2">Estudios mamarios</h2>
                     <ul class="estudios__ul">
                         <li>Ecografia mamaria</li>
@@ -105,27 +107,24 @@
                 </div>
             </div>
         </section>
+        <section class="container">
+            <h2 class="row">
+                <a href="./requisitos.html" class="indicaciones">Indicaciones</a>
+            </h2>
+        </section>
     </main>
-    <footer class="container-fluid text-center">
-        <div class="row footer__eslogan">
-            <p class="col-12">Diagnóstico por Imágenes.</p>
-            <p class="col-12">Excelencia médica.</p>
+    <footer class="container-fluid">
+        <div class="row footer__eslogan text-start">
+          <img src="../logo/logo.png" alt="logo empresa" class="col-6 logoempresa">
+          <p class="col-6">    Radius <br>
+                        Diagnóstico por Imágenes. <br>
+                            Excelencia médica.</p>
         </div>
-        <div class="row footer__desarrollo">
-            <p class="col-12"> Desarrollo by The Blue Team.</p>
-            <p class="col-12">Todos los derechos reservados.</p>
+        <div class="row footer__desarrollo text-center">
+          <p class="col-12"> Desarrollo by The Blue Team.</p>
+          <p class="col-12">Todos los derechos reservados.</p>
         </div>
-    </footer>
-
-
-
-    <script>
-        // When the user clicks on <div>, open the popup
-        function myFunction() {
-          var popup = document.getElementById("myPopup");
-          popup.classList.toggle("show");
-        }
-        </script>
+      </footer>
 
     <script src="../js/bootstrap.js"></script>
 </body>
