solucione navbar de pagina indicaciones

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,7 +23,7 @@ Atención con turno de lunes a viernes de 8 a 19hs.">
 
 <body>
   <header class="header container-fluid">
-    <nav class="navbar navbar-expand-lg fs-4">
+    <nav class="navbar navbar-expand-lg">
       <div class="container fluid">
         <a href="../index.html" class="navbar-brand"> <img src="../logo/logo.png" alt="logoempresa" class="logo"></a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
