--- a/pages/indicaciones.html
+++ b/pages/indicaciones.html
@@ -15,26 +15,31 @@
   700&family=Nuosu+SIL&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,
   400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <meta name="description" content="preparaciones para estudios medicos">
-  <title>Radius | Indicaciones</title>
+  <meta name="description" content="Centro de diagnostico por imágenes.Nos encontramos en 
+Zona norte, provincia de Buenos Aires, Campana. 
+Atención con turno de lunes a viernes de 8 a 19hs.">
+  <title>Radius | Contacto</title>
 </head>
 
 <body>
   <header class="header container-fluid">
-    <nav class="navbar navbar-expand-lg fs-4">
+    <nav class="navbar navbar-expand-lg">
       <div class="container fluid">
-
         <a href="../index.html" class="navbar-brand"> <img src="../logo/logo.png" alt="logoempresa" class="logo"></a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span></button>
         <div id="menu" class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a href="../index.html" class="nav-link" class="menu">Home</a></li>
-            <li class="nav-item"><a href="./staffmedico.html" class="nav-link" class="menu">Staff Médico</a></li>
-            <li class="nav-item"><a href="./estudios.html" class="nav-link" class="menu">Estudios Médicos</a>
+            <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="./staffmedico.html" class="nav-link">Staff
+                Médico</a></li>
+            <li class="nav-item"><a href="./estudios.html" class="nav-link">Estudios
+                Médicos</a>
             </li>
-            <li class="nav-item"><a href="./cobertura.html" class="nav-link" class="menu">Cobertura Médica</a></li>
-            <li class="nav-item"><a href="./contacto.html" class="nav-link" class="menu">Contacto</a></li>
+            <li class="nav-item"><a href="./cobertura.html" class="nav-link">Cobertura
+                Médica</a></li>
+            <li class="nav-item"><a href="./contacto.html" class="nav-link">Contacto</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -66,12 +71,13 @@
         </ul>
         <p class="preparaciones__p">Los demás estudios no requieren de preparación previa.</p>
       </div>
+
   </main>
   <footer class="container-fluid">
     <section class="row footer__eslogan">
       <div class="col-6">
         <img src="../logo/logo.png" alt="logo empresa" class="logoempresa">
-        <p> <strong>Radius</strong> <br>
+        <p> <strong>Radius </strong><br>
           Diagnóstico por Imágenes. <br>
           Excelencia médica.</p>
       </div>
@@ -98,5 +104,9 @@
     </div>
   </footer>
 
-  </body>
-  </html>
+
+
+  <script src="../js/bootstrap.js"></script>
+</body>
+
+</html>
