--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -21,7 +21,7 @@
 
 <body>
     <header class="header container-fluid">
-        <nav class="navbar navbar-expand-lg fs-4">
+        <nav class="navbar navbar-expand-lg">
             <div class="container fluid">
                 <a href="../index.html" class="navbar-brand"> <img src="../logo/logo.png" alt="logoempresa"
                         class="logo"></a>
