agregue gitignore y readme

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -55,9 +55,10 @@ Atención con turno de lunes a viernes de 8 a 19hs.">
       </div>
 
     </section>
+    
     <div class="container-fluid text-center">
       <h1>Formulario de contacto</h1>
-      <p class="form-p">Déjanos tu consulta y te responderemos a la brevedad posible.</p>
+      <p class="info__parrafo">Déjanos tu consulta y te responderemos a la brevedad posible.</p>
     </div>
 
     <div class="container">
@@ -86,7 +87,7 @@ Atención con turno de lunes a viernes de 8 a 19hs.">
         </div>
 
         <div class="col-12">
-          <p>Mensaje</p>
+          <p class="textarea">Mensaje</p>
           <textarea name="text" cols="30" rows="10" class="form-control"></textarea>
         </div>
 
@@ -97,7 +98,7 @@ Atención con turno de lunes a viernes de 8 a 19hs.">
 
     </div>
     </form>
-
+  
     <section class="container">
       <div class="row">
 
