--- a/pages/indicaciones.html
+++ b/pages/indicaciones.html
@@ -55,7 +55,7 @@ Atención con turno de lunes a viernes de 8 a 19hs.">
       </div>
     </section>
 
-    <section class="container-fluid text-center preparaciones">
+    <section class="container text-center preparaciones">
 
       <h1>Indicaciones</h1>
       <div class="row">
@@ -64,13 +64,14 @@ Atención con turno de lunes a viernes de 8 a 19hs.">
           <li class="preparaciones__li">Ecografía de abdomen</li>
         </ul>
         <p class="preparaciones__p">Tomar 1 litro de agua, 1hs antes y retener hasta el momento del estudio</p>
-        <ul class="preparaciones__ul">
+        <ul>
           <li class="preparaciones__li">Ecografia vesical/vesicoprostática</li>
           <li class="preparaciones__li">Ecografia ginecológica</li>
           <li class="preparaciones__li">Ecografía obstetrica hasta semana 12</li>
         </ul>
         <p class="preparaciones__p">Los demás estudios no requieren de preparación previa.</p>
       </div>
+      </section>
 
   </main>
   <footer class="container-fluid">
