arregle grid en cobertura

--- a/pages/cobertura.html
+++ b/pages/cobertura.html
@@ -50,12 +50,13 @@
       </div>
 
     </section>
-    <section class="container-fluid">
+    <section>
+      <div class="container-fluid">
       <h1>Cobertura médica</h1>
-      <p class="cobertura-p">Información para el paciente</p>
-      <div>
+    </div>
+      <p class="p-cobertura">Información para el paciente</p>
         <ul class="cobertura">
-          <div class="cobertura-1">
+          <div class="cobertura__1">
             <li>Accord Salud</li>
             <li>Amffa</li>
             <li>APM (Agente de propaganda médica)</li>
@@ -69,7 +70,7 @@
             <li>Dasuten</li>
             <li>Federada Salud</li>
           </div>
-          <div class="cobertura-2">
+          <div class="cobertura__2">
             <li>Galeno</li>
             <li>Jerarquicos Salud</li>
             <li>Medife</li>
@@ -83,8 +84,7 @@
             <li>Swiss Medical</li>
           </div>
         </ul>
-      </div>
-      <p class="cobertura-p">Ud. debe verificar en su prepaga cuál es la cobertura que tiene su plan en nuestra intitución.</p>
+      <p class="p-cobertura">Si ud. tiene dudas sobre su cobertura en nuestra institución deberá verificar esta información en su prepaga.</p>
     </section>
   </main>
   <footer class="container-fluid">
