di formato a las distintas paginas y revise ortografía

--- a/pages/cobertura.html
+++ b/pages/cobertura.html
@@ -24,7 +24,8 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container fluid">
 
-        <a href="../index.html" class="navbar-brand"> <img src="../logo/logo.png" alt="logoempresa" class="logo"></a>
+        <a href="../index.html" class="navbar-brand"> <img src="../logo/logo.png" alt="logo de la empresa"
+            class="logo"></a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span></button>
         <div id="menu" class="collapse navbar-collapse">
@@ -52,48 +53,49 @@
     </section>
     <section>
       <div class="container-fluid">
-      <h1>Cobertura médica</h1>
-    </div>
-    <p class="p-cobertura">Si ud. tiene dudas sobre su cobertura en nuestra institución deberá verificar esta información en su prepaga.</p>
-        <ul class="cobertura">
-          <div class="cobertura__1">
-            <li>Accord Salud</li>
-            <li>Amffa</li>
-            <li>APM (Agente de propaganda médica)</li>
-            <li>Apsot</li>
-            <li>Banco provincia</li>
-            <li>CASA</li>
-            <li>Cobertec</li>
-            <li>Colegio de escribanos (provincia)</li>
-            <li>COMEI</li>
-            <li>Dasmi</li>
-            <li>Dasuten</li>
-            <li>Federada Salud</li>
-          </div>
-          <div class="cobertura__2">
-            <li>Galeno</li>
-            <li>Jerarquicos Salud</li>
-            <li>Medife</li>
-            <li>Medicus</li>
-            <li>Omint</li>
-            <li>Osde</li>
-            <li>Osdipp</li>
-            <li>Patrones de Cabotaje</li>
-            <li>Prevencion Salud</li>
-            <li>Sancor Salud</li>
-            <li>Swiss Medical</li>
-          </div>
-        </ul>
-      
+        <h1>Cobertura médica</h1>
+      </div>
+      <p class="p-cobertura">Si ud. tiene dudas sobre su cobertura en nuestra institución deberá verificar esta
+        información en su prepaga.</p>
+      <ul class="cobertura">
+        <div class="cobertura__1">
+          <li>Accord Salud</li>
+          <li>Amffa</li>
+          <li>APM (Agente de propaganda médica)</li>
+          <li>Apsot</li>
+          <li>Banco provincia</li>
+          <li>CASA</li>
+          <li>Cobertec</li>
+          <li>Colegio de escribanos (provincia)</li>
+          <li>COMEI</li>
+          <li>Dasmi</li>
+          <li>Dasuten</li>
+          <li>Federada Salud</li>
+        </div>
+        <div class="cobertura__2">
+          <li>Galeno</li>
+          <li>Jerarquicos Salud</li>
+          <li>Medife</li>
+          <li>Medicus</li>
+          <li>Omint</li>
+          <li>Osde</li>
+          <li>Osdipp</li>
+          <li>Patrones de Cabotaje</li>
+          <li>Prevencion Salud</li>
+          <li>Sancor Salud</li>
+          <li>Swiss Medical</li>
+        </div>
+      </ul>
+
     </section>
   </main>
   <footer class="container-fluid">
     <section class="row footer__eslogan">
       <div class="col-6">
-        <img src="../logo/logo.png" alt="logo empresa" class="logoempresa">
-        <p> <strong>Radius</strong> <br>
-          Diagnóstico por Imágenes. <br>
-          Excelencia médica.</p>
+        <img src="../logo/logo.png" alt="logo de la empresa" class="logoempresa">
+        <p> <strong>Radius</strong>
+        <p>Diagnóstico por Imágenes.</p>
+        <p>Excelencia médica.</p>
       </div>
 
       <div class="col-6 text-center">
