--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,7 +25,8 @@ Atención con turno de lunes a viernes de 8 a 19hs.">
   <header class="header container-fluid">
     <nav class="navbar navbar-expand-lg">
       <div class="container fluid">
-        <a href="../index.html" class="navbar-brand"> <img src="../logo/logo.png" alt="logoempresa" class="logo"></a>
+        <a href="../index.html" class="navbar-brand"> <img src="../logo/logo.png" alt="logo de la empresa"
+            class="logo"></a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span></button>
         <div id="menu" class="collapse navbar-collapse">
@@ -55,10 +56,10 @@ Atención con turno de lunes a viernes de 8 a 19hs.">
       </div>
 
     </section>
-    
+
     <div class="container-fluid text-center">
       <h1>Formulario de contacto</h1>
-      <p class="info__parrafo">Déjanos tu consulta y te responderemos a la brevedad posible.</p>
+      <p class="info__parrafo">Déjenos su consulta y te responderemos a la brevedad posible.</p>
     </div>
 
     <div class="container">
@@ -98,7 +99,7 @@ Atención con turno de lunes a viernes de 8 a 19hs.">
 
     </div>
     </form>
-  
+
     <section class="container">
       <div class="row">
 
@@ -125,18 +126,18 @@ Atención con turno de lunes a viernes de 8 a 19hs.">
           </picture>
         </div>
     </section>
-        </div>
-      </div>
+    </div>
+    </div>
     </section>
 
   </main>
   <footer class="container-fluid">
     <section class="row footer__eslogan">
       <div class="col-6">
-        <img src="../logo/logo.png" alt="logo empresa" class="logoempresa">
-        <p> <strong>Radius </strong><br>
-          Diagnóstico por Imágenes. <br>
-          Excelencia médica.</p>
+        <img src="../logo/logo.png" alt="logo de la empresa" class="logoempresa">
+        <p> <strong>Radius</strong>
+        <p>Diagnóstico por Imágenes.</p>
+        <p>Excelencia médica.</p>
       </div>
 
       <div class="col-6 text-center">
