--- a/pages/exito.html
+++ b/pages/exito.html
@@ -38,10 +38,10 @@
   <footer class="container-fluid">
     <section class="row footer__eslogan">
       <div class="col-6">
-        <img src="../logo/logo.png" alt="logo empresa" class="logoempresa">
-        <p> <strong>Radius</strong> <br>
-          Diagnóstico por Imágenes. <br>
-          Excelencia médica.</p>
+        <img src="../logo/logo.png" alt="logo de la empresa" class="logoempresa">
+        <p> <strong>Radius</strong>
+        <p>Diagnóstico por Imágenes.</p>
+        <p>Excelencia médica.</p>
       </div>
 
       <div class="col-6 text-center">
