--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <header class="header container-fluid">
     <nav class="navbar navbar-expand-lg">
       <div class="container fluid">
-        <a href="./index.html" class="navbar-brand"> <img src="./logo/logo.png" alt="logoempresa" class="logo"></a>
+        <a href="./index.html" class="navbar-brand"> <img src="./logo/logo.png" alt="logo de la empresa"
+            class="logo"></a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span></button>
         <div id="menu" class="collapse navbar-collapse">
@@ -105,10 +106,10 @@
   <footer class="container-fluid">
     <section class="row footer__eslogan">
       <div class="col-6">
-        <img src="../logo/logo.png" alt="logo empresa" class="logoempresa">
-        <p> <strong>Radius</strong> <br>
-          Diagnóstico por Imágenes. <br>
-          Excelencia médica.</p>
+        <img src="../logo/logo.png" alt="logo de la empresa" class="logoempresa">
+        <p> <strong>Radius</strong>
+        <p>Diagnóstico por Imágenes.</p>
+        <p>Excelencia médica.</p>
       </div>
 
       <div class="col-6 text-center">
